// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Mobile TitleBar component Renders a Title Bar with a claim only 1`] = `
<div
  style={
    Object {
      "fontFamily": "PT Sans Caption",
    }
  }
>
  <div>
    <div
      className="title-container"
    >
      <ul>
        <li
          className="title"
        >
          <a>
            <span>
              Claim 1
            </span>
          </a>
        </li>
        <li
          className="download"
        >
          <div
            id="download-btn-container"
          >
            <div />
            <a
              aria-label="Download"
              id="download-btn"
              onClick={[Function]}
              onKeyPress={[Function]}
              role="button"
              tabIndex={0}
            >
              <i
                className="fa fa-cloud-download cloud"
              />
            </a>
            <div
              className="download-label"
            >
              Download
            </div>
            <style
              jsx={true}
            >
              
          * {
            margin: 0;
            padding: 0;
          }
          a {
            color: #ffffff;
            font-size: 30px;
            cursor: pointer;
          }
          .download-label {
            font-size: 15px;
          }
          #download-btn-container {
            display: flex;
            justify-content: center;
            align-items: center;
            flex-direction: column;
            color: White;
          }
          @media (max-width: 800px) {
            .download-label {
              display: none;
            }
            a {
              fontsize: 1em;
            }
          }
        
            </style>
          </div>
        </li>
      </ul>
      <style
        jsx={true}
      >
        
      .title-container {
        display: flex;
        font-family: PT Sans Caption;
        padding: 0.7em 0;
        backgroundimage: linear-gradient(90deg, #006298, #0085AD);
        width: '100%';
        flex-basis: '100%';
        flex-direction: row;
        justify-content: center;
        align-items: center;
      }

      a {
        color: #ffffff;
      }
      ul {
        display: flex;
        flex-wrap: wrap;
        flex-direction: row;
        align-items: center;
        justify-content: space-evenly;
        list-style-type: none;
        max-width: 85%;
        width: 100vw;
        margin: 0;
        padding: 0;
      }
      .title {
        color: white;
        font-size: 1.129em;
        text-align: left;
      }
      .download {
        width: auto;
      }
    
      </style>
    </div>
  </div>
</div>
`;

exports[`Storyshots Mobile TitleBar component Renders a Title Bar with all data 1`] = `
<div
  style={
    Object {
      "fontFamily": "PT Sans Caption",
    }
  }
>
  <div>
    <div
      className="title-container"
    >
      <ul>
        <li
          className="title"
        >
          <a>
            <span>
              Claim 1
            </span>
          </a>
        </li>
        <li
          className="title"
        >
          <span>
            Target 1
          </span>
        </li>
        <li
          className="download"
        >
          <div
            id="download-btn-container"
          >
            <div />
            <a
              aria-label="Download"
              id="download-btn"
              onClick={[Function]}
              onKeyPress={[Function]}
              role="button"
              tabIndex={0}
            >
              <i
                className="fa fa-cloud-download cloud"
              />
            </a>
            <div
              className="download-label"
            >
              Download
            </div>
            <style
              jsx={true}
            >
              
          * {
            margin: 0;
            padding: 0;
          }
          a {
            color: #ffffff;
            font-size: 30px;
            cursor: pointer;
          }
          .download-label {
            font-size: 15px;
          }
          #download-btn-container {
            display: flex;
            justify-content: center;
            align-items: center;
            flex-direction: column;
            color: White;
          }
          @media (max-width: 800px) {
            .download-label {
              display: none;
            }
            a {
              fontsize: 1em;
            }
          }
        
            </style>
          </div>
        </li>
      </ul>
      <style
        jsx={true}
      >
        
      .title-container {
        display: flex;
        font-family: PT Sans Caption;
        padding: 0.7em 0;
        backgroundimage: linear-gradient(90deg, #006298, #0085AD);
        width: '100%';
        flex-basis: '100%';
        flex-direction: row;
        justify-content: center;
        align-items: center;
      }

      a {
        color: #ffffff;
      }
      ul {
        display: flex;
        flex-wrap: wrap;
        flex-direction: row;
        align-items: center;
        justify-content: space-evenly;
        list-style-type: none;
        max-width: 85%;
        width: 100vw;
        margin: 0;
        padding: 0;
      }
      .title {
        color: white;
        font-size: 1.129em;
        text-align: left;
      }
      .download {
        width: auto;
      }
    
      </style>
    </div>
  </div>
</div>
`;

exports[`Storyshots Mobile TitleBar component Renders a Title Bar with header only 1`] = `
<div
  style={
    Object {
      "fontFamily": "PT Sans Caption",
    }
  }
>
  <div>
    <div
      className="title-container"
    >
      <ul>
        <li
          className="title"
        >
          <a>
            <span>
              Claim 1
            </span>
          </a>
        </li>
      </ul>
      <style
        jsx={true}
      >
        
      .title-container {
        display: flex;
        font-family: PT Sans Caption;
        padding: 0.7em 0;
        backgroundimage: linear-gradient(90deg, #006298, #0085AD);
        width: '100%';
        flex-basis: '100%';
        flex-direction: row;
        justify-content: center;
        align-items: center;
      }

      a {
        color: #ffffff;
      }
      ul {
        display: flex;
        flex-wrap: wrap;
        flex-direction: row;
        align-items: center;
        justify-content: space-evenly;
        list-style-type: none;
        max-width: 85%;
        width: 100vw;
        margin: 0;
        padding: 0;
      }
      .title {
        color: white;
        font-size: 1.129em;
        text-align: left;
      }
      .download {
        width: auto;
      }
    
      </style>
    </div>
  </div>
</div>
`;

exports[`Storyshots Mobile TitleBar component Renders a download button 1`] = `
<div
  style={
    Object {
      "fontFamily": "PT Sans Caption",
    }
  }
>
  <div>
    <div
      id="download-btn-container"
    >
      <div />
      <a
        aria-label="Download"
        id="download-btn"
        onClick={[Function]}
        onKeyPress={[Function]}
        role="button"
        tabIndex={0}
      >
        <i
          className="fa fa-cloud-download cloud"
        />
      </a>
      <div
        className="download-label"
      >
        Download
      </div>
      <style
        jsx={true}
      >
        
          * {
            margin: 0;
            padding: 0;
          }
          a {
            color: #ffffff;
            font-size: 30px;
            cursor: pointer;
          }
          .download-label {
            font-size: 15px;
          }
          #download-btn-container {
            display: flex;
            justify-content: center;
            align-items: center;
            flex-direction: column;
            color: White;
          }
          @media (max-width: 800px) {
            .download-label {
              display: none;
            }
            a {
              fontsize: 1em;
            }
          }
        
      </style>
    </div>
  </div>
</div>
`;
